# huffman

./: .gitignore  Cargo.toml  README.md  data_format  data_format.md
.github/workflows/: release.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: coding.rs
src/: bitvec.rs  cli.rs  decode.rs  encode.rs  lib.rs  main.rs  traits.rs
