[package]
name = "huffman-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.huffman]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "x86_64-unknown-linux-gnu"
path = "fuzz_targets/x86_64-unknown-linux-gnu.rs"
test = false
doc = false
bench = false
